# IngSw2018

./: .gitignore  .gitmodules  README.md
WatchDoge/: build.gradle
WatchDoge/app/: build.gradle
WatchDoge/app/src/androidTest/java/dogedroid/com/watchdoge/: ExampleInstrumentedTest.java
WatchDoge/app/src/main/: AndroidManifest.xml
WatchDoge/app/src/main/java/dogedroid/com/watchdoge/: CreditsActivity.java  DashboardActivity.java  Discovery.java  DiscoveryActivity.java  DogeLogActivity.java  LiveFeed.java  LiveFeedActivity.java  MainActivity.java  Pairing.java
WatchDoge/app/src/main/java/dogedroid/com/watchdoge/dogelog/: DogeLogActivity.java  ListaLog.java
WatchDoge/app/src/main/java/dogedroid/com/watchdoge/onboarding/: OnBoarding_1.java  OnBoarding_2.java  OnBoarding_3.java  OnBoarding_4.java  OnBoarding_5.java
WatchDoge/app/src/main/java/dogedroid/com/watchdoge/utility/: DiscoverDoge.java  DogeLogAdapter.java  GetPairingKey.java  ListaLog.java  LiveFeed.java  RepeatListener.java  SendPairingKey.java
WatchDoge/app/src/main/res/layout/: activity_credits.xml  activity_dashboard.xml  activity_doge_log.xml  activity_live_feed.xml  activity_main.xml  activity_on_boarding_1.xml  activity_on_boarding_2.xml  activity_on_boarding_3.xml  activity_on_boarding_4.xml  activity_on_boarding_5.xml  recview_dogelog.xml
WatchDoge/app/src/main/res/menu/: dashboard_menu.xml
WatchDoge/app/src/main/res/values/: colors.xml  strings.xml  strings_credits.xml  strings_onboarding.xml
WatchDoge/app/src/test/java/dogedroid/com/watchdoge/: ExampleUnitTest.java
docs/: DBSchema  Gantt.odg  IDEE PER IL ROBOCAZZO.md  NOTE APP DogeDroid.txt  Piano di Progetto 2.0.md  PianoDiProgetto.md  PianoDiProgetto.tex  Quadrati rischi.xd  Requisiti Funzionali Nomi.txt  WBS.md  logo.xd  protocol.xd
docs/DocumentoDiProgettazione/: Class_diagram.odg  DS_Intrusione.seq.violet.html  DS_LiveFeed.seq.violet.html  main.md  main.tex  schema-1.xd
docs/DocumentoDiSpecificaDeiRequisiti/: Requisiti.md  UC-Diagram.odg  allarme.xd  main.md  main.tex  temp.tex
docs/DocumentoDiSpecificaDeiRequisiti/gfx/: UC-Diagram.odg
docs/FinalMockup/: Descrizione mockup.md
docs/FinalMockup/Main_mock/: Main_mock.xd
docs/FinalMockup/Pair_mock/: Pair_mock.xd
docs/PianoDiProgetto/: PERT.odg  main.tex
docs/PianoDiProgetto/gfx/: Gantt.odg  PERT.odg
docs/PianoDiTesting/: main.md  main.tex
firmware/: .gitignore  CMakeLists.txt  README.md  build_mock.sh  build_robot.sh
firmware/common/: CMakeLists.txt
firmware/common/include/: AlarmEngine.hpp  AllarmEngine.hpp  Comm.hpp  Discovery.hpp  HardwareInterface.hpp  Pairing.hpp  Server.hpp  WebApi.hpp  WebServer.hpp
firmware/common/include/DB/: DB.hpp  DBConnector.hpp
firmware/common/include/DB/Entity/: Intrusion.hpp  Root.hpp  Time.hpp  TimeSpan.hpp  WeekDay.hpp
firmware/common/include/HTTP/: AutoRoute.hpp  HeaderField.hpp  NotFoundRoute.hpp  Request.hpp  Response.hpp  Route.hpp  Router.hpp  WebServer.hpp
firmware/common/include/Network/: AutoRoute.hpp  NotFoundRoute.hpp  Request.hpp  Route.hpp  Router.hpp  ServerUDP.hpp  UDPData.hpp  WebServer.hpp
firmware/common/include/UDP/: ServerUDP.hpp  UDPData.hpp
firmware/common/include/UI/: FrameBuffer.hpp  UI.hpp  normal_font.xbm
firmware/common/include/Webcam/: ImageCapturer.hpp  MotionDetector.hpp
firmware/common/src/: AlarmEngine.cpp  AllarmEngine.cpp  Comm.cpp  Discovery.cpp  HardwareInterface.cpp  Pairing.cpp  Server.cpp  WebApi.cpp  WebServer.cpp
firmware/common/src/DB/: DB.cpp  DBConnector.cpp
firmware/common/src/DB/Entity/: Intrusion.cpp  Root.cpp  Time.cpp  TimeSpan.cpp  WeekDay.cpp
firmware/common/src/HTTP/: AutoRoute.cpp  HeaderField.cpp  NotFoundRoute.cpp  Request.cpp  Response.cpp  Route.cpp  Router.cpp  WebServer.cpp
firmware/common/src/Network/: AutoRoute.cpp  HeaderField.cpp  NotFoundRoute.cpp  Request.cpp  Response.cpp  Route.cpp  Router.cpp  ServerUDP.cpp  UDPData.cpp  WebServer.cpp
firmware/common/src/UDP/: ServerUDP.cpp  UDPData.cpp
firmware/common/src/UI/: UI.cpp
firmware/common/src/Webcam/: ImageCapturer.cpp  MotionDetector.cpp
firmware/mock/: CMakeLists.txt
firmware/mock/include/: MockHardwareInterface.hpp  SDLFrameBuffer.hpp
firmware/mock/src/: MockHardwareInterface.cpp  SDLFrameBuffer.cpp  main.cpp
firmware/robot/: CMakeLists.txt
firmware/robot/include/: EV3Lcd.hpp  RobotHardwareInterface.hpp
firmware/robot/src/: EV3Lcd.cpp  RobotHardwareInterface.cpp  main.cpp
mock-firmware/: .gitignore  README.md  package.json
mock-firmware/src/: index.js
robot-backend/: .gitignore  build.sh  dub.json  dub.selections.json
robot-backend/source/: app.d
robot-firmware/: .gitignore  CMakeLists.txt  README.md  build.sh
robot-firmware/include/: RobotHardware.hpp
robot-firmware/src/: RobotHardware.cpp  main.cpp
